force-app/main/default/objects/LF_Membership_Owner__c/LF_Membership_Owner__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This stores owner information for lf memebership renewals</description>
    <label>LF Membership Owner</label>
</CustomObject>