force-app/main/default/objects/LF_Membership_Owner__c/fields/Associate__c.field-meta.xml
<CustomField>
    <fullName>Associate__c</fullName>
    <label>Associate</label>
    <length>18</length>
    <type>Text</type>
</CustomField>