force-app/main/default/objects/LF_Membership_Owner__c/fields/Gold__c.field-meta.xml
<CustomField>
    <fullName>Gold__c</fullName>
    <label>Gold</label>
    <length>18</length>
    <type>Text</type>
</CustomField>