force-app/main/default/objects/LF_Membership_Owner__c/fields/Platinum__c.field-meta.xml
<CustomField>
    <fullName>Platinum__c</fullName>
    <label>Platinum</label>
    <length>18</length>
    <type>Text</type>
</CustomField>