force-app/main/default/objects/LF_Membership_Owner__c/fields/Silver__c.field-meta.xml
<CustomField>
    <fullName>Silver__c</fullName>
    <label>Silver</label>
    <length>18</length>
    <type>Text</type>
</CustomField>